<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="12sp"
  android:background="@drawable/back">
  <TextView
    android:id="@+id/text1_field"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:text="@string/enter_name"
    style="@style/ItalicBold"/>
  <EditText
    android:id="@+id/edit1_field"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/text1_field"
    android:textSize="18dp"
    android:textColorHint="#ff707070"
    android:hint="@string/enter_name_hint"/>
  <TextView
    android:id="@+id/text3_field"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/edit1_field"
    android:paddingTop="10sp"
    android:text="@string/enter_url"
    style="@style/ItalicBold"/>
  <EditText
    android:id="@+id/edit2_field"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/text3_field"
    android:textSize="18dp"
    android:textColorHint="#ff707070"
    android:hint="@string/enter_url_hint"/>
  <Button
    android:id="@+id/preview_feed_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/edit2_field"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:text="@string/preview_feed"
    android:background="@drawable/button_selector"
    android:onClick="previewFeed"
    style="@style/ItalicBold.Button"/>
  <Button
    android:id="@+id/create_feed_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/edit2_field"
    android:layout_toRightOf="@id/preview_feed_button"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:text="@string/create_feed"
    android:background="@drawable/button_selector"
    android:onClick="createFeed"
    style="@style/ItalicBold.Button"/>
  <ListView
    android:id="@android:id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/create_feed_button"/>
  <TextView 
    android:id="@android:id/empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_below="@id/create_feed_button"
    android:gravity="center"
    android:text="@string/rss_preview"
    android:textSize="20sp"
    android:textColor="#ff707070"/>
  <LinearLayout
    android:id="@+id/ad_layout"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="#ffd2d2d2"
    android:layout_alignParentBottom="true">
    <com.google.ads.AdView 
      android:id="@+id/adView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#000000"
      ads:adUnitId="a1519e672c9021e"
      ads:adSize="BANNER"
      ads:loadAdOnCreate="true"/>
  </LinearLayout>
</RelativeLayout>
