<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="12sp"
  android:background="@drawable/back">
  <TextView
    android:id="@+id/enter_name_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:text="@string/enter_name"
    style="@style/ItalicBold"/>
  <EditText
    android:id="@+id/edit_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/enter_name_text"
    android:textSize="18dp"
    android:textColorHint="#ff707070"
    android:hint="@string/enter_name_hint"/>
  <TextView
    android:id="@+id/enter_url_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/edit_name"
    android:paddingTop="10sp"
    android:text="@string/enter_url"
    style="@style/ItalicBold"/>
  <EditText
    android:id="@+id/edit_url"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/enter_url_text"
    android:textSize="18dp"
    android:textColorHint="#ff707070"
    android:hint="@string/enter_url_hint"/>
  <Button
    android:id="@+id/preview_feed_button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/edit_url"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:text="@string/preview_feed"
    android:background="@drawable/button_selector"
    android:onClick="previewFeed"
    style="@style/ItalicBold.Button"/>
  <Button
    android:id="@+id/update_feed_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/edit_url"
    android:layout_toRightOf="@id/preview_feed_button2"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:text="Update Feed"
    android:background="@drawable/button_selector"
    android:onClick="updateFeed"
    style="@style/ItalicBold.Button"/>
  <ListView
    android:id="@android:id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/update_feed_button"/>
  <TextView 
    android:id="@android:id/empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_below="@id/update_feed_button"
    android:gravity="center"
    android:text="@string/rss_preview"
    android:textSize="20sp"
    android:textColor="#ff707070"/>
</RelativeLayout>
